[package]
name = "actix-api"
version = "0.1.0"
authors = ["Ramiro <ramiroaisen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
lazy_static = "*"
mongodb = "*"
bson = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
json = "*"
tokio = "*"
env_logger = "*"
serde_qs = "*"