[package]
name = "openradio-search"
version = "0.1.0"
authors = ["Ramiro <ramiroaisen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "*"
unidecode = "*"
bson = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
math = "*"
ngrams = "*"
atty = "*"
rayon = "1.1"
ws = "*"
lazy_static = "*"